--- a/data/translation/en.json
+++ b/data/translation/en.json
@@ -9,7 +9,7 @@
     "skip-charms": "Skip charm extraction (Why??)",
     "delete-frames": "Delete old frames",
     "deleting-frames": "Deleting existing frames: ",
-    "save-charms":"Save charms",
+    "save-charms": "Save charms",
     "autosaving": "Autosaving Charms: ",
     "autosave-files": "Autosave charm files",
     "change-input": "Change input directory",
@@ -21,21 +21,25 @@
     "detect-non-seq": "Detecting non-sequential duplicate frames",
     "non-seq-diff": "Reduced frames from {} to {}",
     "total-input": "Total input files to scan: {}",
-    "parsing-skills-slots":"Parsing skills and slots",
-    "validate-fix":"Validating and fixing charms",
+    "parsing-skills-slots": "Parsing skills and slots",
+    "validate-fix": "Validating and fixing charms",
     "logger-skill-less": "Skill-less charm found in {}",
-    "logger-charm-error":"An error occured when extracting charm on {}. Error: {}",
-    "current-file":"File being scanned: ",
-    "frames-found":"Unique Charm Frames: ",
-    "unique-frames":"True Unique Frames: ",
-    "charms-found":"Total Charms Found: ",
-    "unique-charms":"Unique Charms: ",
-    "file-progress":"File Progress",
-    "done-scanning":"Done Scanning Files",
-    "step-1-name":"Extracting Frames",
-    "step-2-name":"Extracting charms from frames",
-    "charms-saved":"Your charms were saved to \"{0}\" and \"{1}\".\nTo use on MHR-Wiki, you'll want the contents of \"{1}\"",
-    "copy-to-clipboard":"Copy encoded charms to clipboard",
-    "copied-to-clipboard":"Encoded charms were copied to the clipboard."
-
+    "logger-charm-error": "An error occured when extracting charm on {}. Error: {}",
+    "current-file": "File being scanned: ",
+    "frames-found": "Unique Charm Frames: ",
+    "unique-frames": "True Unique Frames: ",
+    "charms-found": "Total Charms Found: ",
+    "unique-charms": "Unique Charms: ",
+    "file-progress": "File Progress",
+    "done-scanning": "Done Scanning Files",
+    "step-1-name": "Extracting Frames",
+    "step-2-name": "Extracting charms from frames",
+    "charms-saved": "Your charms were saved to \"{0}\" and \"{1}\".\nTo use on MHR-Wiki, you'll want the contents of \"{1}\"",
+    "copy-to-clipboard": "Copy encoded charms to clipboard",
+    "copied-to-clipboard": "Encoded charms were copied to the clipboard.",
+    "recording-language": "MHR game language: ",
+    "tess-download-pack": "Downloading {} language pack to: {}",
+    "tess-download-done": "Finished downloading language pack",
+    "tess-found-language": "Language pack was found",
+    "tess-permission-denied": "Could not download language pack to location, overriding TESSDATA_PREFIX."
 }
