--- a/data/translations/eng.json
+++ b/data/translations/eng.json
@@ -61,5 +61,6 @@
     "new-app-update": "A new version for Utsushi's Charm is available (You: {}, New: {}), do you want to download it?",
     "new-skill-update": "New skills were released in-game (You: {}, New: {}), do you want to update your skill list?",
     "new-app-language-update": "An updated language file for Utsushi's Charm is available (You: {}, New: {}), do you want to download it?",
-    "new-skill-correction-update": "New automatic skill corrections were submitted (You: {}, New: {}), do you download them?"
+    "new-skill-correction-update": "New automatic skill corrections were submitted (You: {}, New: {}), do you download them?",
+    "rebirth-title": "Charm Rebirth"
 }
