--- a/data/translations/fra.json
+++ b/data/translations/fra.json
@@ -71,5 +71,6 @@
     "tess-not-found": "Tesseract n'a pas été trouv. Veuillez l'installer, s'il est installé, passez le à travers le command line au moins une fois. Si cette erreur continue d'apparaître, veuillez créer une issue sur Github..",
     "remove-black-bars": "Retirer les barres noires\nDevrait marcher avec le mode fenêtre",
     "remove-black-bars-info": "L'application va essayer d'enlever les barres noires autour du vidéo.\n¨Ça devrait aussi fonctionner si vous enregistrer le jeu en mode fenêtre.\nC'est utile lorsque vous n'avez pas configuré la taille de la TV pour la switch.\nC'est 100% expérimental et un peu aléatoire.\nEnregistrez les vidéos comme il faut avant de vous plaindre :)",
-    "upd-ignore": "Ignorer"
+    "upd-ignore": "Ignorer",
+    "add-as-is": "Ajouter tel quel"
 }
