--- a/data/translations/eng.json
+++ b/data/translations/eng.json
@@ -7,7 +7,7 @@
     "input-dir": "Input video location: ",
     "frame-dir": "Frame location: ",
     "skipping-frames": "Skipping frame extraction: ",
-    "skip-frames": "Skips frames extraction\n (Recover from previous run)",
+    "skip-frames": "Skip frames extraction\n (Recover from previous run)",
     "skip-charms": "Skip charm extraction (Why??)",
     "delete-frames": "Delete old frames",
     "deleting-frames": "Deleting existing frames: ",
@@ -68,5 +68,9 @@
     "tess-wait-5-retry": "Waiting 5 seconds before trying to download the language pack again...",
     "tess-url-error": "A URL error occured, this might be a DNS issue... retrying",
     "tess-cannot-download": "Unable to download Tesseract language pack.",
-    "tess-not-found": "Tesseract was not found. Please install it, and if it is installed, pass it as a command line option at least once. If you have done both and it still isn't found, please open an issue on Github."
+    "tess-not-found": "Tesseract was not found. Please install it, and if it is installed, pass it as a command line option at least once. If you have done both and it still isn't found, please open an issue on Github.",
+    "remove-black-bars": "Remove black bars\nMay work with windowed capture",
+    "remove-black-bars-info": "The app will attempt to remove black bars.\nIt should work if you are recording in windowed mode.\nThis should be useful if your switch isn't properly scaled (TV Size setting).\nThis is 100% experimental (and somewhat random). Fix your videos before you complain :)",
+    "upd-ignore": "Ignore",
+    "add-as-is": "Add skill as-is"
 }
