修正些許有語病的部分 (#45)

--- a/data/translations/chi_tra.json
+++ b/data/translations/chi_tra.json
@@ -55,7 +55,7 @@
     "cancel-skill": "跳過此護石",
     "empty-skill": "技能為空",
     "enter-skill": "輸入名稱",
-    "charms-to-fix": "待修復的護石:",
+    "charms-to-fix": "待修正的護石:",
     "repair-charms": "修復解析錯誤",
     "new-version": "發現新版本",
     "new-app-update": "新版本的 Utsushi's Charm 已可更新 (You: {}, New: {}), 你想下載他嗎?",
@@ -68,9 +68,9 @@
     "tess-wait-5-retry": "再五秒後重新嘗試下載語系包...",
     "tess-url-error": "發生了網址錯誤，這可能是因為DNS所產生的問題... 正在重新嘗試",
     "tess-cannot-download": "無法下載 Tesseract 語言包。",
-    "tess-not-found": "Tesseract 檔案不存在. 請安裝他，如果已安裝請將他以命令列啟動。如果你已做了上訴兩種步驟，請上Github反饋問題。",
+    "tess-not-found": "Tesseract 檔案不存在. 請安裝他，如果已安裝請將他以命令列啟動。如果你已做了上述兩種步驟，請到Github上反饋問題。",
     "remove-black-bars": "刪除黑邊\n適用於視窗擷取",
-    "remove-black-bars-info": "應用程式會嘗試刪除黑邊。如果你在視窗模式下錄製影片，這也許會有幫助（此為實驗性功能）在你抱怨問題之前請請嘗試修復你的影片 :)",
+    "remove-black-bars-info": "應用程式會嘗試刪除黑邊。如果你在視窗模式下錄製影片，這也許會有幫助（此為實驗性功能）在你抱怨問題之前，請先嘗試修復你的影片 :)",
     "upd-ignore": "略過",
     "add-as-is": "添加技能為",
     "non-16:9": "Non-16:9 video detected, attempting to crop"
